# expediente-scout

./: .env.example  .env.pjn.capture.example  .gitignore  README.md  analisis-simulado-paso6.json  paso2-tree.txt  paso3-tree.txt  paso4-tree.txt  paso5-tree.txt  paso6-tree.txt  paso8-fake-captura.py  paso8-tree.txt  pyproject.toml
config/: mev_aliases.json
config/document_policies/: estado_actual_v1.yaml
config/playbooks/: ordinario_v1.yaml
docs/: README.md  ROADMAP_MEV.md  USO_MEV.md  USO_PJN_OPENCLAW.md
expediente_scout/: cli.py
expediente_scout/domain/: enums.py  (+3 more)
openclaw/: AGENTS.md  COMMANDS.md  SOUL.md  TOOLS.md
scripts/: pjn_capture_chromium.py
tests/: test_paso1.py  test_paso10.py  test_paso11.py  test_paso12_clasificador_playbook.py  test_paso12_cli_clasificar_playbook.py  test_paso12_cli_compactar_estado_actual.py  test_paso12_cli_extraer_texto_seleccionado.py  test_paso12_cli_generar_estado_actual.py  test_paso12_cli_generar_paquete_analisis.py  test_paso12_cli_preanalisis.py  test_paso12_cli_resolver_plan_lectura.py  test_paso12_cli_seleccionar_lectura.py  test_paso12_compactar_estado_actual.py  test_paso12_dedup_estado_actual.py  test_paso12_document_policy_estado_actual.py  test_paso12_extraer_texto_seleccionado.py  test_paso12_generar_estado_actual.py  test_paso12_generar_paquete_analisis.py  test_paso12_playbook_loader.py  test_paso12_preanalisis.py  test_paso12_resolver_plan_lectura.py  test_paso12_seleccionar_lectura.py  test_paso2.py  test_paso3.py  test_paso4.py  test_paso5.py  test_paso6.py  test_paso7.py  test_paso8.py  test_paso9.py
(+31 files in other folders)
